[package]
name = "test-ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
ethers = { version = "2.0.0", features = ["legacy"] }
hex = "0.4.3"
k256 = { version = "0.13.0", features = ["ecdsa"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.26.0", features = ["sync", "full"] }
