[package]
name = "ethereum_ecdsa"
version = "0.1.0"
authors = ["qope"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1"
candid = "0.8.4"
ic-cdk = "0.7.1"
hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0",  features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2.7", features = ["custom"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
anyhow = "1.0.69"
